# gauzian

./: .gitignore  .sops.yaml  API_ENDPOINTS.md  CLAUDE.md  CLEVER_CLOUD_DEPLOY.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT_LOG.md  DEVELOPMEN_LOG.md  Dockerfile  Dockerfile.backend  Dockerfile.backend.optimized  Dockerfile.backend.prebuilt  Dockerfile.frontend  MEMORY_FIX.md  METRICS_USAGE_EXAMPLES.md  MONITORING_SETUP.md  README.md  SECURITY_FIXES_REQUIRED.md  SECURITY_TESTING.md  SHARING_E2EE_SOLUTION.md  SHARING_TEST_GUIDE.md  TODO.md  cookies.txt  db.yaml  docker-compose.dev.yml  docker-compose.yml  eslint-report.txt  nuxt.config.ts  package-lock.json  package.json  push_docker_hub.sh  sonar-project.properties  sqlmap_quick_test.sh  styles.css  tes.html  test-complete-stress.js  test-login-k6.js  test.txt  (+3 more)
.githooks/: pre-commit
.github/workflows/: api-security-tests.yml  build-and-push.yml  codeql.yml  lint.yml  main.yml  rust-ci.yml  sonar-back-release.yml  sonar-back.yml  sonar-release.yml  sonar.yml
app/: app.vue
app/components/: AppHeader.vue  ContextMenu.vue  EventAgenda.vue  FileItem.vue  FolderTreeNode.vue  (+6 more)
docs/: API_DOCUMENTATION.md  BEST_PRACTICES_FRONTEND.md  CI_CD.md  CLOUDFLARE_WORKERS_SETUP.md  COMMIT_SUMMARY.md  CROWDSEC_SETUP.md  CRYPTO_ARCHITECTURE.md  GRAFANA_METRICS_GUIDE.md  MIGRATION_TESTS.md  OTP_FLOW.md  README.md  RUNBOOKS.md  SECRETS_MANAGEMENT.md  SECURITY_AUDIT_2026-02-15.md  SECURITY_AUDIT_E2EE_2026-04-12.md  SHARING_IMPLEMENTATION.md  TESTING.md  otp-email-preview.html
gauzian_back/: CLAUDE.md  Caddy.Dockerfile  Caddyfile  Cargo.toml  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml  sqlx-prepare.sh
gauzian_back/docs/: API_DOCUMENTATION.md  BEST_PRACTICES_RUST.md  DATABASE_SCHEMA.md  ENV_VARIABLES.md  README.md  test_rate_limit.py
gauzian_back/k8s/: .kustomizeignore  ENV_VARIABLES.md  README.md  backend-deployment.yaml  backend-hpa.yaml  backend-servicemonitor.yaml  caddy-configmap.yaml  caddy-deployment.yaml  cert-issuer.yaml  deploy-monitoring-complete.sh  force-clean.sh  front-deployment.yaml  grafana-dashboard-gauzian.yaml  grafana-dashboard-sysadmin.yaml  grafana-dashboards-provider.yaml  grafana-datasources.yaml  grafana-deployment.yaml  grafana-ingress.yaml  ingress.yaml  ingress.yaml.disabled  ingressroute.yaml  kustomization.yaml  middleware.yaml  minio-deployment.yaml  minio-pvc.yaml  namespace.yaml  node-exporter-daemonset.yaml  postgres-deployment.yaml  postgres-pvc.yaml  prometheus-config.yaml  prometheus-deployment.yaml  redis-deployment.yaml  redis-pvc.yaml  traefik-acme.yaml  traefik-config.yaml  update-dev.sh  update-max.sh
gauzian_back/k8s/dashboards/: sysadmin-complete.json
gauzian_back/k8s/monitoring/: .kustomizeignore  backend-servicemonitor.yaml  grafana-ingressroute.yaml
gauzian_back/k8s/scripts/: ci-deploy.sh  deploy_update.sh  update-dev.sh  update-max.sh
gauzian_back/migrations/: 20260105105155_create_users_table.sql  20260105105757_add_nouvelle_colonne_to_users.sql  20260105134144_add_is_active.sql  20260106092531_add_crypto.sql  20260106100539_add_salut_auth.sql  20260109090149_add_recovery_key.sql  20260109100104_file_and_file_access.sql  20260109104330_add_index_to_chunk.sql  20260109110018_add_is_root_bool.sql  20260109111113_add_access_level.sql  20260116151108_is_delet_and_is_fully_upload.sql  20260202174912_agenda_table.sql  20260202180158_agenda_table_rename.sql  20260203072635_encrypt_agenda_fields.sql
gauzian_back/scripts/: test_rate_limit.py
gauzian_back/src/: ARCHITECTURE.md  auth.rs  drive.rs  handlers.rs  jwt.rs  lib.rs  main.rs  metrics.rs  response.rs  routes.rs  state.rs  storage.rs
gauzian_back/src old/: drive.rs  handlers.rs  main.rs  state.rs
gauzian_back/src/agenda/: handlers.rs  mod.rs  repo.rs  routes.rs
gauzian_back/src/auth/: handlers.rs  mod.rs  repo.rs  services.rs
gauzian_back/src/drive/: handlers.rs  mod.rs  repo.rs  routes.rs  services.rs
gauzian_front/: .dockerignore  API_ENDPOINTS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  index.html  nuxt.config.ts  package-lock.json  package.json
gauzian_front2/: Dockerfile  README.md  next.config.js  package-lock.json  package.json
gauzian_project/: .env  Caddyfile  Cargo.toml  Dockerfile  Dockerfile.caddy  README.md  backup.sql  cert.pem  docker-compose.yml  key.pem  ma_sauvegarde.sql  san.cnf  test_api.sh  test_api_login.sh
gauzian_project/crates/gauzian_api/: Cargo.toml
gauzian_project/crates/gauzian_api/src/: main.rs
gauzian_project/crates/gauzian_auth/: Cargo.toml
gauzian_project/crates/gauzian_auth/src/: lib.old  lib.rs
gauzian_project/crates/gauzian_collab/: Cargo.toml
gauzian_project/crates/gauzian_collab/src/: lib.rs
gauzian_project/crates/gauzian_core/: Cargo.toml
gauzian_project/crates/gauzian_core/src/: lib.rs
gauzian_project/crates/gauzian_drive/: Cargo.toml
gauzian_project/crates/gauzian_drive/src/: lib.rs
gauzian_project/loki/: local-config.yaml
gauzian_project/promtail/: config.yaml
gauzian_sso/: Cargo.toml
gauzian_sso/src/: main.rs
k8s/: backend-deployment.yaml  backend-hpa.yaml  backend-service.yaml  config.env  configmap.yaml  deploy-monitoring.sh  front-deployment.yaml  front-service.yaml  grafana-dashboards-provider.yaml  grafana-deployment.yaml  ingressroute.yaml  kustomization.yaml  middleware.yaml  minio-deployment.yaml  minio-pvc.yaml  minio-service.yaml  namespace.yaml  postgres-deployment.yaml  postgres-portforward.service  postgres-pvc.yaml  postgres-service.yaml  prometheus-config.yaml  prometheus-deployment.yaml  redis-deployment.yaml  redis-pvc.yaml  redis-service.yaml  secrets.enc.yaml  secrets.yaml.example  sonarqube-deployment.yaml
migrations/: 20260202195555_normalize_column_names.sql  20260219120000_add_is_accepted.sql  20260301000000_add_account_tiers.sql  20260314000000_fix_is_root_anchor.sql
src/: ARCHITECTURE.md  jwt.rs  lib.rs  main.rs  metrics.rs  response.rs  routes.rs  state.rs  storage.rs
tests/: README.md  migration_validation.sh  run_tests.sh  setup.ts  setup_test_accounts.sh  test_chunk_metrics.sh
(+246 files in other folders)
