[package]
name = "gauzian_back"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.42", features = ["serde"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.4.2", features = ["v4", "serde", "fast-rng"] }
async-trait = "0.1.83"
dotenvy = "0.15.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tower-http = { version = "0.6.8", features = ["trace"] }
axum-extra = { version = "0.12.5", features = ["cookie", "typed-header"] }
cookie = "0.18.1"
redis = { version = "1.0.2", features = ["tokio-comp"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "macros", "migrate"] }
rand = "0.9.2"
sha2 = "0.10.9"
base64 = "0.22.1"
aws-sdk-s3 = "1.68.0"
aws-config = "1.4.1"
aws-credential-types = "1.2.11"
bytes = "1.5.0"
aws-types = "1.3.11"
