[package]
name = "gauzian_sso"
version = "0.1.0"
edition = "2024"

[dependencies]
# 1. Le Moteur (Async)
tokio = { version = "1", features = ["full"] }

# 2. Le Serveur Web
axum = "0.7"

# 3. La donnée (JSON)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 4. La Base de données
# "runtime-tokio-rustls" est crucial : il permet d'utiliser Tokio pour la DB 
# et d'embarquer la crypto (rustls) sans dépendre d'OpenSSL sur le système.
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"] }
uuid = { version = "1", features = ["serde", "v4"] }

# 5. La Sécurité & Config
argon2 = "0.5"
dotenvy = "0.15"