[package]
name = "gauzian_api"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Tes Modules ---
gauzian_core = { path = "../gauzian_core" }
gauzian_auth = { path = "../gauzian_auth" }
gauzian_drive = { path = "../gauzian_drive" }

# --- Framework Web ---
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["full","cors"] }

# --- Database (nécessaire pour créer le pool ici) ---
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "time", "chrono", "ipnetwork"] }

# --- Utils ---
dotenvy = "0.15"
axum-server = { version = "0.7", features = ["tls-rustls"] }

# woothee
woothee = "0.7"

# ipnetwork
axum-client-ip = "0.6.0"
ipnetwork = "0.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-error = "0.2"