[package]
name = "gauzian_drive"
version = "0.1.0"
edition = "2024"

[dependencies]
gauzian_core = { path = "../gauzian_core" }
gauzian_auth = { path = "../gauzian_auth" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
anyhow = "1.0"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
axum = { version = "0.7", features = ["macros"] }
actix-web = "4.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "time", "chrono","ipnetwork"]  }
uuid = { version = "1", features = ["serde", "v4"] }
base64 = "0.22"
bytes = "1.4"
async-stream = "0.3"
jsonwebtoken = "9.2"
chrono = "0.4"
tracing = "0.1"